--- a/CW_App Design.ipynb
+++ b/CW_App Design.ipynb
@@ -2,7 +2,44 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "D:\\Programs\\Anaconda\\python.exe\n",
+      "C:\\Users\\WiZor\\AppData\\Local\\Programs\\Python\\Python39\\python.exe\n",
+      "D:\\Programs\\Python\\Python38-32\\python.exe\n"
+     ]
+    }
+   ],
+   "source": [
+    "!where python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pip 21.3.1 from D:\\Programs\\Anaconda\\lib\\site-packages\\pip (python 3.8)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip --version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -30,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +76,7 @@
        "'cpu'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +114,6 @@
     "                 text_color: tuple=(255, 255, 0),\n",
     "                 action_delay: int=3,\n",
     "                 save_imgs: bool=True,\n",
-    "                 PATH = Path('.'),\n",
     "                 RESULTS_PATH: Path=Path('results'),\n",
     "                 ICONS_PATH: Path=Path('icons'),\n",
     "                 device='cpu'\n",
@@ -117,13 +153,13 @@
     "        else:\n",
     "            self._sign_pics = sign_pics\n",
     "        \n",
-    "        self.actions = {1: (self._default_1_act, 'fixed', {'text':'Cancelled', 'display_time': 10, 'act_time': 0}),\n",
-    "                        2: (self._default_2_act, 'fixed', {'text':'Hello there!', 'display_time': 30, 'act_time': 0}),\n",
-    "                        3: (self._default_3_act, 'fixed', {'text':'Calc is opening...', 'display_time': 30, 'act_time': 30}),\n",
+    "        self.actions = {1: (self._default_1_act, 'fixed', {'text': 'Cancelled', 'display_time': 10, 'act_time': 0}),\n",
+    "                        2: (self._default_2_act, 'fixed', {'text': 'Hello there!', 'display_time': 30, 'act_time': 0}),\n",
+    "                        3: (self._default_3_act, 'fixed', {'text':  'Calc is opening...', 'display_time': 30, 'act_time': 30}),\n",
     "                        4: (self._default_4_act, 'fixed', {'text':'Session is ending...', 'display_time': 30, 'act_time': 30}),\n",
-    "                        5: (self._default_5_act, 'continues', {'text':'Icon is decreasing...', 'display_time': 1, 'act_time': 0}),\n",
-    "                        6: (self._default_6_act, 'continues', {'text':'Icon is increasing...', 'display_time': 1, 'act_time': 0}),\n",
-    "                        7: (self._default_7_act, 'continues', {'text':'Just test', 'display_time': 1, 'act_time': 0})}\n",
+    "                        5: (self._default_5_act, 'continues', {'text': 'Icon is decreasing...', 'display_time': 1, 'act_time': 0}),\n",
+    "                        6: (self._default_6_act, 'continues', {'text': 'Icon is increasing...', 'display_time': 1, 'act_time': 0}),\n",
+    "                        7: (self._default_7_act, 'continues', {'text': 'Just test', 'display_time': 1, 'act_time': 0})}\n",
     "            \n",
     "        self._action_classification()\n",
     "        \n",
@@ -156,8 +192,8 @@
     "            if q[i][3] == 0:\n",
     "                self._do_now.append(q[i][0])\n",
     "            if q[i][2] > 0:\n",
-    "                self._query[i][2] -=1\n",
-    "                self._query[i][3] -=1\n",
+    "                self._query[i][2] -= 1\n",
+    "                self._query[i][3] -= 1\n",
     "            else:\n",
     "                self._query.pop(i)\n",
     "    \n",
@@ -214,9 +250,9 @@
     "        return res\n",
     "    \n",
     "    def _gesture_detect(self,\n",
-    "                 img: np.array,\n",
-    "                 transform: transforms.transforms.Compose,\n",
-    "                 model: torch.nn.Module):\n",
+    "                        img: np.array,\n",
+    "                        transform: transforms.transforms.Compose,\n",
+    "                        model: torch.nn.Module):\n",
     "        img = cv2.cvtColor(img, cv2.COLOR_BGR2RGB)\n",
     "        img = Image.fromarray(img)\n",
     "        img = transform(img)\n",
@@ -359,9 +395,8 @@
     "                    cv2.imwrite(str(self._RESULTS_PATH / f'{self._iteration}.png'), frame)\n",
     "                self._iteration += 1\n",
     "\n",
-    "            duration = (dt.datetime.now() - self._started_at).total_seconds()\n",
-    "\n",
     "        finally:\n",
+    "            duration = (dt.datetime.now() - self._started_at).total_seconds()\n",
     "            cv2.destroyAllWindows()\n",
     "            cap.release()\n",
     "            if self._save_imgs:\n",
@@ -370,11 +405,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_o = GestureRecog(torch.load('sign_d_ep_15_acc_0.998', map_location=torch.device(device)),\n",
+    "new_o = GestureRecog(torch.load('models/sign_d_ep_15_acc_0.998', map_location=torch.device(device)),\n",
     "                     pic_size=(640, 480),\n",
     "                     save_imgs=False,\n",
     "                     face_detect_freq=10,\n",
@@ -384,14 +419,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "FPS = 13.699193117525377\n"
+      "FPS = 12.345831430017654\n"
      ]
     }
    ],
@@ -417,7 +452,7 @@
     "\n",
     "**Особенности реализации**:\n",
     "* за модель распознавания жестов из коробки взят аналог `ResNet18`;\n",
-    "* при использовании стандартной `MTCNN` и модели распознавания жеста из коробки при угадывании жеста без оптимизаций количество кадров в секунду приблизительно равно 5, если же распознавать лицо 1 раз в 10 кадров (как настроено сейчас), выстродействие вырастает более чем в 2 раза - в среднем 12 кадров в секунду на моем железе (дальнейшую оптимизацию можно делать, изменяя архитектуру модели распознавания жестов). Без фиксации лица модель может работать со скорость в ~120 кадров в секунду, но камера у меня с 30 ¯\\\\\\_(ツ)\\_/¯ ;\n",
+    "* при использовании стандартной `MTCNN` и модели распознавания жеста из коробки при угадывании жеста без оптимизаций количество кадров в секунду приблизительно равно 5, если же распознавать лицо 1 раз в 10 кадров (как настроено сейчас), выстродействие вырастает более чем в 2 раза - в среднем 12 кадров в секунду на моем железе (дальнейшую оптимизацию можно делать, изменяя архитектуру модели распознавания жестов). Без фиксации лица модель может работать со скорость в ~120 кадров в секунду, но камера у меня в 30 ¯\\\\\\_(ツ)\\_/¯ ;\n",
     "* распознавание жеста происходит не по 1 кадру, а по серии (настраиваемый параметр, по умолчанию 10), в рамках которой идет усреднение результата и выбора максимального. Такой подход позволяет избегать случайного фиксирования какого-либо жеста при перестроении руки (например, после показанного пальца вверх при убирании руки не будет фикироваться кулак, который скорее всего будет на мгновение показан);\n",
     "* \n",
     "* сейчас стандартная модель обучена только на датасете моих жестов и в ограниченном пространстве, поэтому может иметь место некоторое переобучение, в дальнейшем требуется расширение датасета и дообучение модели распознавания жестов.\n",
